--- a/index.html
+++ b/index.html
@@ -5,25 +5,24 @@
 		<link rel="icon" href="/sveltebox/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta http-equiv="content-security-policy" content="">
-	<link rel="modulepreload" href="/sveltebox/_app/immutable/start-63d3970d.js">
+	<link rel="modulepreload" href="/sveltebox/_app/immutable/start-7cacb680.js">
 	<link rel="modulepreload" href="/sveltebox/_app/immutable/chunks/index-4f5b2732.js">
-	<link rel="modulepreload" href="/sveltebox/_app/immutable/chunks/singletons-f088844d.js">
+	<link rel="modulepreload" href="/sveltebox/_app/immutable/chunks/singletons-eee3709f.js">
 	<link rel="modulepreload" href="/sveltebox/_app/immutable/components/layout.svelte-34b45f3a.js">
 	<link rel="modulepreload" href="/sveltebox/_app/immutable/modules/pages/_layout.ts-b8ee4d7c.js">
 	<link rel="modulepreload" href="/sveltebox/_app/immutable/chunks/_layout-1daba58d.js">
-	<link rel="modulepreload" href="/sveltebox/_app/immutable/components/pages/_page.svelte-76e51908.js">
+	<link rel="modulepreload" href="/sveltebox/_app/immutable/components/pages/_page.svelte-aa953f4d.js">
 	</head>
 	<body>
 		<div>
 
 
-<h1>Welcome to your library project</h1>
-<p>Create your package using @sveltejs/package and preview/showcase your work with SvelteKit</p>
-<p>Visit <a href="https://kit.svelte.dev">kit.svelte.dev</a> to read the documentation</p>
+<h1>SvelteBox</h1>
+<p>A collection of components and styles to speed up svelte development.</p>
 
 
-		<script type="module" data-sveltekit-hydrate="o0jcmj">
-		import { start } from "/sveltebox/_app/immutable/start-63d3970d.js";
+		<script type="module" data-sveltekit-hydrate="defa0p">
+		import { start } from "/sveltebox/_app/immutable/start-7cacb680.js";
 
 		start({
 			env: {},
@@ -37,7 +36,7 @@
 				form: null
 			},
 			paths: {"base":"/sveltebox","assets":"/sveltebox"},
-			target: document.querySelector('[data-sveltekit-hydrate="o0jcmj"]').parentNode,
+			target: document.querySelector('[data-sveltekit-hydrate="defa0p"]').parentNode,
 			trailing_slash: "never"
 		});
 	</script>
